<?xml version="1.0"?>
<package format="3">
    <name>my_project</name>
    <version>0.0.1</version>
    <description>Hola</description>

    <maintainer email="john@doe.com">John Doe</maintainer>
    <author email="john@doe.com">John Doe</author>

    <license>BSD</license>

    <url type="website">https://github.com/PickNikRobotics/my_project</url>
    <url type="bugtracker">https://github.com/PickNikRobotics/my_project/issues</url>
    <url type="repository">https://github.com/PickNikRobotics/my_project/</url>

    <buildtool_depend>ament_cmake</buildtool_depend>s
    <buildtool_depend>eigen3_cmake_module</buildtool_depend>
    <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

    <depend>eigen</depend>
    <depend>rclcpp</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
